objects/Gong__Call_Participant__c.object
<CustomObject>
    <fields>
        <fullName>Gong__Affiliation__c</fullName>
        <label>Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gong__Contact_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Call_Contact_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Email_Participant__c</fullName>
        <label>~Email (Deprecated)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gong__Full_Name_Display__c</fullName>
        <formula>IF( ISBLANK(Gong__Contact_Participant__c) , 
	IF( ISBLANK(Gong__Lead_Participant__c) , 
		IF( ISBLANK(Gong__User_Participant__c) , Gong__Full_Name__c , Gong__User_Participant__r.FirstName &amp; &quot; &quot; &amp;Gong__User_Participant__r.LastName),
			Gong__Lead_Participant__r.FirstName &amp;&quot; &quot; &amp;Gong__Lead_Participant__r.LastName ), 
				Gong__Contact_Participant__r.FirstName  &amp; &quot; &quot; &amp; Gong__Contact_Participant__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>~Full Name (Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Full_Name_Temp__c</fullName>
        <label>Participant Full Name Temp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Full_Name__c</fullName>
        <label>Raw Full Name (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Gong_Call__c</fullName>
        <label>Gong Conversation</label>
        <referenceTo>Gong__Gong_Call__c</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Call_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gong__Lead_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Participants</relationshipLabel>
        <relationshipName>Call_Lead_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gong__Methods__c</fullName>
        <label>Participant Methods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attendee</fullName>
                </value>
                <value>
                    <fullName>Invitee</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gong__Participant_Email__c</fullName>
        <label>Participant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gong__Participant_Full_Name__c</fullName>
        <formula>IF( ISBLANK(Gong__Contact_Participant__c) , 
	IF( ISBLANK(Gong__Lead_Participant__c) , 
		IF( ISBLANK(Gong__User_Participant__c) , Gong__Full_Name_Temp__c , Gong__User_Participant__r.FirstName &amp; &quot; &quot; &amp;Gong__User_Participant__r.LastName),
			Gong__Lead_Participant__r.FirstName &amp;&quot; &quot; &amp;Gong__Lead_Participant__r.LastName ), 
				Gong__Contact_Participant__r.FirstName  &amp; &quot; &quot; &amp; Gong__Contact_Participant__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Participant_Phone_Number__c</fullName>
        <label>Participant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gong__Participant_Title__c</fullName>
        <formula>IF( ISBLANK(Gong__Contact_Participant__c) , 
	IF( ISBLANK(Gong__Lead_Participant__c) , 
		IF( ISBLANK(Gong__User_Participant__c) , &quot;&quot; ,  Gong__User_Participant__r.Title ),
			 Gong__Lead_Participant__r.Title  ), 
				 Gong__Contact_Participant__r.Title )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Participant_Type__c</fullName>
        <formula>IF( ISBLANK(Gong__Contact_Participant__c) , 
	IF( ISBLANK(Gong__Lead_Participant__c) , 
		IF( ISBLANK(Gong__User_Participant__c) , &quot;Unknown&quot;, &quot;User&quot;),
			&quot;Lead&quot;), &quot;Contact&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Phone_Participant__c</fullName>
        <label>~Participant Phone (Deprecated)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Gong__Title__c</fullName>
        <formula>IF( ISBLANK(Gong__Contact_Participant__c) , 
	IF( ISBLANK(Gong__Lead_Participant__c) , 
		IF( ISBLANK(Gong__User_Participant__c) , &quot;&quot; ,  Gong__User_Participant__r.Title ),
			 Gong__Lead_Participant__r.Title  ), 
				 Gong__Contact_Participant__r.Title )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title (Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__Type__c</fullName>
        <formula>IF( ISBLANK(Gong__Contact_Participant__c) , 
	IF( ISBLANK(Gong__Lead_Participant__c) , 
		IF( ISBLANK(Gong__User_Participant__c) , &quot;Unknown&quot;, &quot;User&quot;),
			&quot;Lead&quot;), &quot;Contact&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Participant Type (Deprecated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__URL__c</fullName>
        <formula>IF( ISBLANK(Gong__Contact_Participant__c) , 
	IF( ISBLANK(Gong__Lead_Participant__c) , 
		IF( ISBLANK(Gong__User_Participant__c) , &quot;&quot;, HYPERLINK(&quot;/&quot; &amp;Gong__User_Participant__c,&quot;User&quot;,&quot;Gong&quot;)),
HYPERLINK(&quot;/&quot; &amp;Gong__Lead_Participant__c,&quot;Lead&quot;,&quot;Gong&quot;)),
 HYPERLINK(&quot;/&quot; &amp;Gong__Contact_Participant__c,&quot;Contact&quot;,&quot;Gong&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gong__User_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Participant</label>
    <nameField>
        <displayFormat>GCP-{0000000}</displayFormat>
        <label>Call Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>